freshed-rs-macros/tests/ui/fail/html_in_trailing_garbage.rs
use freshed_rs_macros::html_in;

fn main() {
    let _ctx = 9;
    let _ = html_in!(_ctx, <div>ok</div>,);
}
